--- a/_talks/2018-10-14-talk-2.md
+++ b/_talks/2018-10-14-talk-2.md
@@ -1,8 +1,8 @@
 ---
 title: "Machine Learning: The What, The When and The How"
 collection: talks
-type: "Meetup talk"
-permalink: 
+type: "Meetup Talk"
+permalink: /talks/2018-10-14-talk-2
 venue: "PyLadies + LinuxChix Meetup"
 date: 2018-10-14
 location: "Rohini, New Delhi"
