--- a/_talks/2018-08-10-talk-1.md
+++ b/_talks/2018-08-10-talk-1.md
@@ -2,7 +2,7 @@
 title: "FOSS Mega Meetup - Panel Discussion: Open Source and Revenue generation models"
 collection: talks
 type: "Panel Discussion"
-permalink: /talks/2018-08-10-talk-1
+permalink: 
 venue: "Adobe Office"
 date: 2018-10-08
 location: "Noida, Uttar Pradesh"
