--- a/_talks/2018-10-14-talk-2.md
+++ b/_talks/2018-10-14-talk-2.md
@@ -2,7 +2,7 @@
 title: "Machine Learning: The What, The When and The How"
 collection: talks
 type: "Meetup Talk"
-permalink: /talks/2018-10-14-talk-2
+permalink: 
 venue: "PyLadies + LinuxChix Meetup"
 date: 2018-10-14
 location: "Rohini, New Delhi"
